# granular_synth

./: .gitignore  .gitmodules  LICENSE  README.md  _headers  index.html  index.js  test_server.py  wasm_glue.wasm
.github/workflows/: ci-linux-exe.yml  ci-linux-plugin.yml  ci-linux-vst.yml  ci-linux-wasm.yml  ci-linux.yml  ci-macos-exe.yml  ci-macos-plugin.yml  ci-macos-vst.yml  ci-macos.yml  ci-windows-exe.yml  ci-windows-plugin.yml  ci-windows-vst.yml  ci-windows.yml
data/: AppRun.sh  Granade.desktop  Info.plist  icon.icns  logo.aps  test_model.onnx  test_model.pth
data/docs/: CHANGELOG.md  HOW_GRANADE_WORKS.md
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  arena.h  asset_packer.cpp  buffer.h  buffer_stream.h  build.bat  build.sh  build.sh~  build_juce.bat  build_juce.sh  build_wasm.sh  bundle_dependencies.sh  common.api.h  common.h  context.h  fft.h  fft_test.cpp  fft_test_signals.h  file_formats.h  file_granulator.cpp  file_granulator.h  generated.cpp  granade_audio.js  internal_granulator.cpp  internal_granulator.h  main.cpp  math.h  meta.h  midi.cpp  midiTest.cpp  miniaudio.h  model_converter.py  onnx.cpp  onnx.h  parameters_common.h  phase_vocoder.h  (+25 more)
src/include/glad/include/glad/: glad.h
src/include/glad/src/: glad.c
